tests/baselines/reference/stringLiteralTypesWithVariousOperators01.errors.txt
stringLiteralTypesWithVariousOperators01.ts(24,9): error TS2365: Operator '<' cannot be applied to types 'string | number' and 'string | number'.
stringLiteralTypesWithVariousOperators01.ts(25,9): error TS2365: Operator '>=' cannot be applied to types 'string | number' and 'string'.


==== stringLiteralTypesWithVariousOperators01.ts (2 errors) ====
    let abc: "ABC" = "ABC";
    let xyz: "XYZ" = "XYZ";
    let abcOrXyz: "ABC" | "XYZ" = abc || xyz;
    let abcOrXyzOrNumber: "ABC" | "XYZ" | number = abcOrXyz || 100;
    
    let a = "" + abc;
    let b = abc + "";
    let c = 10 + abc;
    let d = abc + 10;
    let e = xyz + abc;
    let f = abc + xyz;
    let g = true + abc;
    let h = abc + true;
    let i = abc + abcOrXyz + xyz;
    let j = abcOrXyz + abcOrXyz;
    let k = +abcOrXyz;
    let l = -abcOrXyz;
    let m = abcOrXyzOrNumber + "";
    let n = "" + abcOrXyzOrNumber;
    let o = abcOrXyzOrNumber + abcOrXyz;
    let p = abcOrXyz + abcOrXyzOrNumber;
    let q = !abcOrXyzOrNumber;
    let r = ~abcOrXyzOrNumber;
    let s = abcOrXyzOrNumber < abcOrXyzOrNumber;
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string | number' and 'string | number'.
    let t = abcOrXyzOrNumber >= abcOrXyz;
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'string | number' and 'string'.
    let u = abc === abcOrXyz;
    let v = abcOrXyz === abcOrXyzOrNumber;